--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <body>
         <article class="product-card">
             <div class="product-img">
-                <img src="c:\Users\ASUS-PC\Downloads\Coca Cola Vs_ Pepsi Explained_ The Differences Between Them.jpg">
+                <img src="c:\Users\ASUS-PC\Downloads\coca-cola.png">
             </div>
             <div class="product-info">
                 <header class="product-heading">
